[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyetw"
version = "1.0.1"
authors = [
    { name="Marius Greuel", email="greuelm@mgtek.com" },
]
description = "Python logging via Event Tracing for Windows"
keywords = ["etw", "windows", "tracelogging", "traceview", "traceview plus"]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
"Homepage" = "https://github.com/mgtek/pyetw"
"Bug Tracker" = "https://github.com/mgtek/pyetw/issues"
