[metadata]
name = pyetw
version = 1.0.0
description = Python logging via Event Tracing for Windows
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mgtek/pyetw
author = Marius Greuel
author_email = greuelm@mgtek.com
license = MIT
keywords = etw,tracelogging,traceview,traceview plus
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
project_urls =
    Bug Tracker = https://github.com/mgtek/pyetw/issues

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
